project/src/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');

:root {
    --text: #f0f0f0;
    --subtext: rgba(255, 255, 255, .8);
    --sec-text: #a5a6f6;
    --bg: #1a1b1f;
    --card-gb: rgba(255, 255, 255, .02);
    --card-border: rgba(255, 255, 255, .1);
    --card-extra: rgba(255, 255, 255, .4);
    --dark-gradient: linear-gradient(to top right, #333333, #262626 40%);
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

#app {
    width: 100dvw;
    height: 100dvh;
    overflow-x: hidden;
}

body {
    font-family: 'Roboto Mono', monospace;
    background-color: var(--bg);
    color: var(--text);
}

/* width */
::-webkit-scrollbar {
  width: 8px;
}

/* Track */
::-webkit-scrollbar-track {
  background: rgba(255, 255, 255, .1);
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: var(--sec-text);
  border-radius: 1em;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #7375dd;
}

